# helper_for_job

./: .env  .gitignore  Dockerfile_backend  Dockerfile_frontend  alembic.ini  amvera.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirement.txt  requirements.txt
alembic_async/: env.py
alembic_async/versions/: 2025_03_23_1605-b2ac4d1cb6a3_add_tables.py  2025_03_24_1401-e8f87057e556_add_table_refreshtokens.py  2025_03_26_1804-3bab0e3438d6_connection_added_users_and_refresh_.py  2025_04_19_1833-63d5d4079137_add_table_friends.py  2025_04_19_1938-89f64eaf657d_update_table_friends.py
api/auth/: routers.py  schemas.py
api/auth/core/: config.py  tokens_create.py  utils.py
api/channels/: routers.py  schemas.py
api/friends/: routers.py  schemas.py
app/Backend/: database.py  requirements.txt
app/Backend/api/: database.py  dependencies.py  main.py  models.py  router.py  schemas.py
app/Backend/datadase/: database.py  db_helper.py  dependencies.py  models.py
app/api/auth/: crud.py  routers.py  schemas.py  views.py
app/api/channels/: crud.py  routers.py  schemas.py  views.py
app/api/friends/: routers.py
app/api/users/: crud.py  schemas.py  (+1 more)
app/datadase/: database.py  dependencies.py  models.py
app/static/: auth.js  auth_helpers.js  cookie.js  script.js  style.css  tokens.js
app/templates/: auth.html  main_page.html
certs/: jwt-private.pem  jwt-public.pem
database/: __init__.py  database.py  dependencies.py
templates/auth/: auth.html
templates/main_page/: calendar.html  channels.html  friends.html  main_page.html  tasks.html
(+42 files in other folders)
