[tool.poetry]
name = "crm"
version = "0.1.0"
description = ""
authors = ["zondar__ <kirito98730tkm@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pytest = "^8.3.5"
pyjwt = "^2.10.1"
bcrypt = "^4.3.0"
dotenv = "^0.9.9"
sqlalchemy = "^2.0.39"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.8.1"
fastapi-users-db-sqlalchemy = "^7.0.0"
alembic = "^1.15.1"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
